# articulation-tracker

./: CMakeLists.txt  README.md  icp_pose_estimator.py  installation.md  installation_ros.md  package.xml  point_cloud_utils.py  recorded_streamer.py  sam2_icg_tracker.py  sam2_icp_tracker.py  visualization_utils.py  zed_sam2_icp_tracker.py
launch/: sam2_icg_tracking.launch
meta_files/: handle.yaml  zed_color.yaml
scripts/: sam2_icg_tracker_ros.py  zed_simulator_node.py
